Added new modern colour mode.

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "Fortun Learning",
+    "name": "Fortune Free",
     "slug": "fortunlearning",
     "version": "1.0.0",
     "orientation": "portrait",
